tests/ui/cast_targets/sqlite/fail/postgres_marker_in_sqlite.stderr
error[E0277]: the trait bound `Int4: CastTarget<'_, Int, drizzle_core::dialect::SQLiteDialect>` is not satisfied
  --> tests/ui/cast_targets/sqlite/fail/postgres_marker_in_sqlite.rs:13:63
   |
13 |     let _ = cast::<_, _, drizzle::core::types::Int>(user.age, drizzle_types::postgres::types::Int4);
   |             ---------------------------------------           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CastTarget<'_, Int, drizzle_core::dialect::SQLiteDialect>` is not implemented for `Int4`
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `CastTarget<'_, Int, drizzle_core::dialect::SQLiteDialect>` is not implemented for `Int4`
      but trait `CastTarget<'_, Int, drizzle_core::dialect::PostgresDialect>` is implemented for it
  --> core/src/expr/util.rs
   |
   | / impl<'a> CastTarget<'a, crate::types::Int, PostgresDialect>
   | |     for drizzle_types::postgres::types::Int4
   | |____________________________________________^
   = help: for that trait implementation, expected `drizzle_core::dialect::PostgresDialect`, found `drizzle_core::dialect::SQLiteDialect`
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
   |     expr: E,
   |     target_type: impl CastTarget<'a, Target, V::DialectMarker>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
